# experiment

./: README.md  benchmark.c  main.c  makefile  sm4.c  sm4.h  sm4_aesni.c  sm4_aesni.h
Project1/: README.md  benchmark  benchmark.c  main.c  makefile  sm4.c  sm4.h  sm4_aesni.c  sm4_aesni.h  sm4_gcm  sm4_opt.c  sm4_opt.h  sm4_test  sm4_ttable.c
Project1/SM4_GCM/: ghash.c  ghash.h  ghash_table.c  ghash_table.h  sm4_gcm.c  sm4_gcm.h  sm4_gcm_test.c
Project2/: README.md  watermark.py
Project3/: .gitignore  Makefile  README.md
Project3/circuits/: poseidon2.circom
Project3/inputs/: input.json
Project3/poseidon2_input_gen/: Cargo.toml  main.rs
Project3/poseidon2_input_gen/src/: main.rs
Project4/: LenExtAtt.c  LenExtAtt.h  MerkleTree  MerkleTree.c  MerkleTree.h  MerkleTreeTest.c  README.md  main.c  makefile  sm3  sm3.c  sm3.h  sm3_opt.c  sm3_opt.h
Project5/: README.md  sm2.py  test.py
Project6/: DDH_PISP.py  README.md  test_PISP.py
