[package]
name = "poseidon2_input_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
poseidon-rs = { git = "https://github.com/arnaucube/poseidon-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
criterion = "0.7.0"
num-bigint = "0.4"         # 这个是大整数库
num-traits = "0.2"